# Travel_planner

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  travel_planner.postman_collection.json
app/: config.py  database.py  exceptions.py  main.py
app/models/: __init__.py  place.py  project.py
app/repositories/: place_repo.py  project_repo.py
app/routers/: artworks.py  places.py  projects.py
app/schemas/: place.py  project.py
app/services/: art_api.py  place_service.py  project_service.py
